monitoring/prod/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.home.t12.io
      secretName: prometheus-tls
  rules:
    - host: prometheus.home.t12.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - alertmanager.home.t12.io
      secretName: alertmanager-tls
  rules:
    - host: alertmanager.home.t12.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
